JDK25でGuice実行に必要なadd-opensを追加